syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

message GenericCodebookWithCodeResponse {
	repeated GenericCodebookWithCodeItem Items = 1;

	message GenericCodebookWithCodeItem {
	   int32 Id = 1;
	   string Name = 2;
	   string Code = 3;
	   bool IsValid = 4;
	}
}